fixed normalizing changes to page. aboutme and skill's alignment.

--- a/portfolio.css
+++ b/portfolio.css
@@ -67,14 +67,14 @@ main {
 #aboutme {
     margin: 25px;
     font-family: 'Spartan','Times New Roman';
-    font-size: 1.6rem;
+	font-size: 1.6rem;
 }
 
 #aboutme img {
     float: left;
 }
 
-#aboutme aboutsam {
+.aboutsam {
     float: left;
     font-size: 1.6rem;
     width: 45%;
@@ -104,7 +104,7 @@ main {
     background-color: #54575c;
     overflow: auto;
     margin: 0 auto;
-    padding-bottom: 30px;
+	padding-bottom: 30px;
 }
 
 .skills {
@@ -114,17 +114,18 @@ main {
 
 .skills ul {
     list-style: none;
-    overflow: auto;
-    padding: 0;
-    width: 70%;
-    margin: 70px auto;
+	overflow: auto;
+	padding: 0;
+	width: 70%;
+	margin: 70px auto;
+	width: 95%;
 }
 
 .skills li {
     float: left;
     margin: 50px 65px 0px 65px;
-    text-align: center;
-    min-width: 90px;
+	text-align: center;
+	min-width: 90px;
 }
 
 .skills1 :hover {
@@ -198,35 +199,35 @@ main {
         width: 100%;
         height: auto;
     }
-    
+	
     .social {
         width: 60px;
     }
-    
+	
     nav {
         float: left;
         text-align: center;
         margin-left: 35px;
     }
-    
+	
     .portf {
         padding-top: 50px;
     }
-    
+	
     .portfh1  h1 {
         font-size: 2rem;
     }
-    
+	
     #aboutme {
         text-align: center;
     }
-    
+	
     #aboutme img {
         width: 200px;
         height: 200px;
         float: none;
     }
-    
+	
     #aboutme aboutsam {
         float: none;
         font-size: 1.6rem;
@@ -235,31 +236,31 @@ main {
         margin-left: 35px;
         margin-bottom: 45px;
     }
-    
+	
     #quote {
         margin-top: 50px;
         margin-left: 0;
         font-style: oblique;
         font-size: 1.13rem;
     }
-    
+	
     .skills li {
         float: left;
         margin-top: 50px;
         margin-left: 80px;
     }
-    
+	
     .projectlist img {
         display: block;
         width: 300px;
         height: 226px;
         margin-top: 57px;
     }
-    
+	
     .container3 {
         width: auto;
     }
-    
+	
     .container3 button {
         width: 83px;
         height: 30px;
@@ -270,52 +271,52 @@ main {
     }
   }
   @media screen and (max-width: 950px) {
-      
+	  
       nav {
           float: none;
           margin: 0 auto;
           padding-top: 10px;
           text-align: center;
       }
-      
+	  
       .social {
           position: relative;
           top: -35px;
       }
-      
+	  
       #profile {
           width: 25%;
           border-radius: 50%;
           margin-right: 10px;
       }
-      
+	  
       #aboutme aboutsam {
           float: none;
           font-size: 1.6rem;
           width: 45%;
           margin: 90px auto 60px auto;
       }
-      
+	  
       #portfolio {
           background-color: #54575c;
           overflow: auto;
           margin: 0 auto;
       }
-      
+	  
       .projectlist img {
           display: block;
           width: 300px;
           height: 226px;
           margin-top: 57px;
       }
-      
+	  
       .container3 {
           float: none;
           font-family: 'Oxanium','Times New Roman';
           text-align: center;
           width: auto;
       }
-      
+	  
       .container3 button {
           width: 83px;
           height: 30px;
